my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESTOREDINLINE/ESTOREDINLINE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESTOREDINLINE.dml:18:11: In foo
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESTOREDINLINE.dml:11:5: error ESTOREDINLINE: Cannot declare 'saved' variable in an inline method
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESTOREDINLINE.dml:13:5: error ESTOREDINLINE: Cannot declare 'session' variable in an inline method
